# server/helpers/swagger.yaml
@@ -402,6 +402,50 @@ paths:
             summary: Handles GET for all Users
             tags:
                 - UserAPI
+    /api/integrations/connection:
+        post:
+            description: Handle POST request for creating a new connection
+            operationId: idPostConnection
+            responses:
+                "201":
+                    description: ""
+            tags:
+                - PostConnection
+    /api/integrations/connection/{connectionId}/delete:
+        delete:
+            description: Handle DELETE request for deleting an existing connection by connection ID
+            operationId: idDeleteConnection
+            responses:
+                "200":
+                    description: ""
+            tags:
+                - DeleteConnection
+    /api/integrations/connection/{connectionKind}/edit:
+        put:
+            description: Handle PUT request for updating an existing connection
+            operationId: idPUtConnection
+            responses:
+                "200":
+                    description: ""
+            tags:
+                - PUtConnection
+    /api/integrations/connections/{connectionKind}:
+        get:
+            description: |-
+                ```?order={field}``` orders on the passed field
+
+                ```?search={modelname}``` If search is non empty then a greedy search is performed
+
+                ```?page={page-number}``` Default page number is 1
+
+                ```?pagesize={pagesize}``` Default pagesize is 25. To return all results: ```pagesize=all```
+            operationId: idGetConnectionsByKind
+            responses:
+                "200":
+                    $ref: '#/responses/ConnectionPage'
+            summary: Handle GET request for getting all connections for a given kind.
+            tags:
+                - GetConnectionsByKind
     /api/meshmodel/components/register:
         post:
             description: Validate the given value with the given schema
@@ -1648,6 +1692,46 @@ responses:
         schema:
             additionalProperties: {}
             type: object
+    Connection:
+        description: ""
+        headers:
+            created_at:
+                format: date-time
+                type: string
+            credential_id: {}
+            deleted_at: {}
+            id: {}
+            kind:
+                type: string
+            metadata: {}
+            name:
+                type: string
+            sub_type:
+                type: string
+            type:
+                type: string
+            updated_at:
+                format: date-time
+                type: string
+            user_id: {}
+        schema:
+            additionalProperties: {}
+            type: object
+    ConnectionPage:
+        description: ""
+        headers:
+            connection:
+                items: {}
+                type: array
+            page:
+                format: int64
+                type: integer
+            page_size:
+                format: int64
+                type: integer
+            total_count:
+                format: int64
+                type: integer
     EventsResponse:
         description: ""
         headers:
